# aoc2019

Aoc2019.hsproj/: .uuid
Aoc2019.hsproj/Day1/: AdventOfCode2019.cabal  Day1.hs  Day2.hs  Main.hs  _Main.hsplay
